WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249405
[SIMD] Intel fix min, max, and CompareIntegerVector operations
https://bugs.webkit.org/show_bug.cgi?id=249405
Summary
[SIMD] Intel fix min, max, and CompareIntegerVector operations
Yijia Huang
Reported
2022-12-15 09:53:02 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-15 09:53:30 PST
<
rdar://problem/103407309
>
Yijia Huang
Comment 2
2022-12-15 09:56:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7699
EWS
Comment 3
2022-12-15 10:05:04 PST
Committed
257935@main
(5cc55bff84d4): <
https://commits.webkit.org/257935@main
> Reviewed commits have been landed. Closing PR #7699 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug