[SIMD] Intel fix min, max, and CompareIntegerVector operations https://bugs.webkit.org/show_bug.cgi?id=249405 rdar://103407309

Reviewed by Yusuke Suzuki.

* Source/JavaScriptCore/assembler/X86Assembler.h:
(JSC::X86Assembler::vmaxps_rrr):
(JSC::X86Assembler::vmaxpd_rrr):
(JSC::X86Assembler::vminps_rrr):
(JSC::X86Assembler::vminpd_rrr):
* Source/JavaScriptCore/wasm/WasmAirIRGenerator64.cpp:
(JSC::Wasm::AirIRGenerator64::addSIMDRelOp):

Canonical link: https://commits.webkit.org/257935@main